[gd_scene load_steps=8 format=3 uid="uid://b7vum0lrkygnc"]

[ext_resource type="Script" path="res://script/cards/moss/ap.gd" id="1_j6ab4"]
[ext_resource type="PackedScene" uid="uid://tahtsvfotixd" path="res://scenes/component/health_component.tscn" id="2_yssu5"]
[ext_resource type="PackedScene" uid="uid://4gn77audskrs" path="res://scenes/component/attack_component.tscn" id="3_ky8m8"]
[ext_resource type="PackedScene" uid="uid://bx028wy2lu25i" path="res://scenes/component/outfit_component.tscn" id="4_dlj3f"]
[ext_resource type="Texture2D" uid="uid://cutpdyj88solh" path="res://img/piece/standerd/dark_green.png" id="5_8h2tu"]
[ext_resource type="PackedScene" uid="uid://c83kbyxqmarvi" path="res://scenes/component/score_component.tscn" id="6_mn0hm"]
[ext_resource type="PackedScene" uid="uid://d2lqpgvgq4oh3" path="res://scenes/component/buff_component.tscn" id="7_meigd"]

[node name="MossAP" type="Node2D" node_paths=PackedStringArray("health_component", "attack_component", "outfit_component", "score_component", "buff_component")]
script = ExtResource("1_j6ab4")
health_component = NodePath("HealthComponent")
attack_component = NodePath("AttackComponent")
outfit_component = NodePath("OutfitComponent")
score_component = NodePath("ScoreComponent")
buff_component = NodePath("BuffComponent")

[node name="HealthComponent" parent="." instance=ExtResource("2_yssu5")]
unique_name_in_owner = true
DEAFULT_MAX_HEALTH = 3

[node name="AttackComponent" parent="." instance=ExtResource("3_ky8m8")]
unique_name_in_owner = true
DEFAULT_ATK = 3
ATK_PATTERN = 5

[node name="OutfitComponent" parent="." instance=ExtResource("4_dlj3f")]
unique_name_in_owner = true
icon_texture = ExtResource("5_8h2tu")
frame = 2

[node name="ScoreComponent" parent="." instance=ExtResource("6_mn0hm")]
unique_name_in_owner = true

[node name="BuffComponent" parent="." instance=ExtResource("7_meigd")]
unique_name_in_owner = true

[connection signal="on_hit" from="AttackComponent" to="." method="_on_attack_component_on_hit"]
